Flow Control in Java

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HelloKotlin">
+        <activity android:name=".FlowControlKotlinActivity"></activity>
+        <activity
+            android:name=".FlowControlJavaActivity"
+            android:lable="FlowControlJavaActivity" />
+        <activity
+            android:name=".FlowControlKotlinActivity"
+            android:lable="FlowControlJavaActivity" />
+        <!--<activity
+            android:name=".FlowControlKotlinActivity"
+            android:label="FlowControlKotlinActivity" />-->
         <activity
             android:name=".VariableKotlinActivity"
-            android:label="VariableKotlinActivity"></activity>
+            android:label="VariableKotlinActivity" />
         <activity
             android:name=".VariableJavaActivity"
             android:label="VariableJavaActivity" />
